add some validator

--- a/src/app/views/pages/login.component.html
+++ b/src/app/views/pages/login.component.html
@@ -38,9 +38,9 @@
                     <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
                         <div class="card-body text-center">
                             <div>
-                                <br><h2>XXXXXX</h2><br>
-                                <h5>XXXXXXXXXXXXXXXX</h5><br><br>
-                                <button type="button" class="btn btn-primary active mt-3">注册账户</button>
+                                <br><h2>报修系统</h2><br>
+                                <h5>常州轻工职业技术学院</h5><br><br>
+                                <!--<button type="button" class="btn btn-primary active mt-3">注册账户</button>-->
                             </div>
                         </div>
                     </div>
