--- a/src/app/views/repair/repair.list.component.html
+++ b/src/app/views/repair/repair.list.component.html
@@ -143,7 +143,7 @@
       <div class="modal-body">
         <form class="form-horizontal">
           <div class="form-group">
-            <label class="control-label">评价等级</label>
+            <label class="control-label">评价等级<span style="color:red; font-size: 20px;">*</span></label>
             <label style="width: 100%">
               <select [(ngModel)]="f_Repair.rate" name="rate" class="form-control">
                 <option value="20">一星</option>
