--- a/src/app/views/repair/repair.detail.component.html
+++ b/src/app/views/repair/repair.detail.component.html
@@ -11,7 +11,7 @@
                     <div class="table-responsive">
                         <form class="form-horizontal">
                             <div class="form-group" style="margin-top: 50px;">
-                                <label class="col-sm-2 control-label">报修内容</label>
+                                <label class="col-sm-2 control-label">报修内容<span style="color:red; font-size: 20px;">*</span></label>
                                 <div class="col-sm-8">
                                     <!--<input type="text" [(ngModel)]="repair.content" class="form-control" id="inputContent"-->
                                            <!--name="inputContent" placeholder="请输入报修内容">-->
@@ -19,26 +19,31 @@
                                 </div>
                             </div>
                             <div class="form-group" style="margin-top: 50px;">
-                                <label class="col-sm-2 control-label">区域</label>
+                                <label class="col-sm-2 control-label">区域<span style="color:red; font-size: 20px;">*</span></label>
                                 <div class="col-sm-8">
                                     <select [(ngModel)]="repair.area" name="area" class="form-control">
-                                        <option value="0">宿舍区</option>
+                                        <option value="0">公寓区</option>
                                         <option value="1">教学区</option>
+                                        <option value="2">办公场所(室内公共设施)</option>
+                                        <option value="3">室外公共设施</option>
+                                        <option value="4">绿化卫生</option>
+                                        <option value="5">食堂</option>
+                                        <option value="6">其他</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="form-group" style="margin-top: 50px;">
-                                <label class="col-sm-2 control-label">详细地址</label>
+                                <label class="col-sm-2 control-label">详细地址<span style="color:red; font-size: 20px;">*</span></label>
                                 <div class="col-sm-8">
                                     <input type="text" [(ngModel)]="repair.address" class="form-control" id="inputAddress"
                                            name="inputAddress" placeholder="请输入地址">
                                 </div>
                             </div>
                             <div class="form-group" style="margin-top: 50px;">
-                                <label class="col-sm-2 control-label">联系方式</label>
+                                <label class="col-sm-2 control-label">联系方式<span style="color:red; font-size: 20px;">*</span></label>
                                 <div class="col-sm-8">
-                                    <input type="text" [(ngModel)]="repair.telephone" class="form-control" id="inputTelephone"
-                                           name="inputAddress" placeholder="请联系方式">
+                                    <input type="tel"  [(ngModel)]="repair.telephone" class="form-control" id="inputTelephone" minlength="11"
+                                            pattern="/^1[3|5][0-9]\d{4,8}$/" required name="inputAddress" placeholder="请联系方式">
                                 </div>
                             </div>
                             <div class="form-group">
