--- a/src/app/views/repair/repairRecord.detail.component.html
+++ b/src/app/views/repair/repairRecord.detail.component.html
@@ -11,7 +11,7 @@
                     <div class="table-responsive">
                         <form class="form-horizontal">
                             <div class="form-group" style="margin-top: 50px;">
-                                <label class="col-sm-2 control-label">维修进展</label>
+                                <label class="col-sm-2 control-label">维修进展<span style="color:red; font-size: 20px;">*</span></label>
                                 <div class="col-sm-8">
                                     <textarea rows="6" cols="90" [(ngModel)]="repairRecord.repair_progress" name="content"></textarea>
                                 </div>
@@ -26,14 +26,14 @@
                                 </div>
                             </div>
                             <div class="form-group" style="margin-top: 50px;" *ngIf="status ==1">
-                                <label class="col-sm-2 control-label">使用材料</label>
+                                <label class="col-sm-2 control-label">使用材料<span style="color:red; font-size: 20px;">*</span></label>
                                 <div class="col-sm-8">
                                     <input type="text" [(ngModel)]="repair.material" class="form-control" id="inputMaterial"
                                            name="inputMaterial" placeholder="请输入材料">
                                 </div>
                             </div>
                             <div class="form-group" style="margin-top: 50px;" *ngIf="status ==1">
-                                <label class="col-sm-2 control-label">维修结果</label>
+                                <label class="col-sm-2 control-label">维修结果<span style="color:red; font-size: 20px;">*</span></label>
                                 <div class="col-sm-8">
                                     <input type="text" [(ngModel)]="repair.result" class="form-control" id="inputResult"
                                            name="inputResult" placeholder="请输入维修结果">
