--- a/src/app/views/repair/repair.detail.component.html
+++ b/src/app/views/repair/repair.detail.component.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive">
-                        <form class="form-horizontal">
+                        <form class="form-horizontal" #userForm="ngForm">
                             <div class="form-group" style="margin-top: 50px;">
                                 <label class="col-sm-2 control-label">报修内容<span style="color:red; font-size: 20px;">*</span></label>
                                 <div class="col-sm-8">
@@ -42,8 +42,12 @@
                             <div class="form-group" style="margin-top: 50px;">
                                 <label class="col-sm-2 control-label">联系方式<span style="color:red; font-size: 20px;">*</span></label>
                                 <div class="col-sm-8">
-                                    <input type="tel"  [(ngModel)]="repair.telephone" class="form-control" id="inputTelephone" minlength="11"
-                                            pattern="/^1[3|5][0-9]\d{4,8}$/" required name="inputAddress" placeholder="请联系方式">
+                                    <input type="text"  [(ngModel)]="repair.telephone" class="form-control" id="inputTelephone"
+                                           minlength="11" maxlength="11" required name="inputTelephone" placeholder="请联系方式" validateMobile>
+                                    <div [hidden]="userForm.controls.inputTelephone?.valid || userForm.controls.inputTelephone?.pristine" class="alert alert-danger">
+                                        <p *ngIf="userForm.controls.inputTelephone?.errors?.minlength">号码长度必须为11</p>
+                                        <p *ngIf="userForm.controls.inputTelephone?.errors?.validateMobile">手机号码格式不正确</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-group">
