--- a/src/app/views/repair/evaluate.detail.component.html
+++ b/src/app/views/repair/evaluate.detail.component.html
@@ -14,6 +14,7 @@
                                 <label class="col-sm-2 control-label">用户评分等级</label>
                                 <div class="col-sm-8">
                                     <select [(ngModel)]="rate" name="userRate" class="form-control" disabled>
+                                        <option value="0">暂无评分</option>
                                         <option value="20">一星</option>
                                         <option value="40">二星</option>
                                         <option value="60">三星</option>
