--- a/src/app/views/repair/repairRecord.list.component.html
+++ b/src/app/views/repair/repairRecord.list.component.html
@@ -1,10 +1,12 @@
 
 <accordion>
-    <accordion-group heading="XXX维修记录" [isOpen]="isFirstOpen" [isDisabled]="isFirstOpen"  [panelClass]="customClass">
-        <p>xxx维修记录追踪详情</p>
+    <accordion-group heading="维修记录" [isOpen]="isFirstOpen" [isDisabled]="isFirstOpen"  [panelClass]="customClass">
+        <p>维修记录追踪详情</p>
         <accordion-group *ngFor="let repairRecord of repairRecordList" heading="{{repairRecord.create_time| date: 'yyyy/MM/dd HH:mm:ss'}}"  [isOpen]="isFirstOpen"  >
             <p><strong>{{repairRecord.repair_progress}}</strong></p>
         </accordion-group>
+        <accordion-group *ngIf="show" heading="暂无维修记录">
+            <!--<p><strong>暂无维修记录</strong></p>-->
+        </accordion-group>
     </accordion-group>
-
 </accordion>
