--- a/src/app/views/repair/repair.list.component.html
+++ b/src/app/views/repair/repair.list.component.html
@@ -48,6 +48,10 @@
                       <a class="dropdown-item" href="javascript:void(0);"
                          (click)="update(repair)">修改</a>
                     </li>
+                    <li role="menuitem" *ngIf="repair.repair_status!==0 || repair.repair_status!==1">
+                      <a class="dropdown-item" href="javascript:void(0);"
+                         (click)="checkRepairRecord(repair)">维修跟踪</a>
+                    </li>
                     <li role="menuitem" *ngIf="repair.repair_status===3 && repair.isEvaluate==='n' ">
                       <a class="dropdown-item" href="javascript:void(0);"
                          (click)="evaluate(repair)">评价</a>
