--- a/src/app/views/repair/repairRecord.list.component.html
+++ b/src/app/views/repair/repairRecord.list.component.html
@@ -5,7 +5,7 @@
         <accordion-group *ngFor="let repairRecord of repairRecordList" heading="{{repairRecord.create_time| date: 'yyyy/MM/dd HH:mm:ss'}}"  [isOpen]="isFirstOpen"  >
             <p><strong>{{repairRecord.repair_progress}}</strong></p>
         </accordion-group>
-        <accordion-group *ngIf="show" heading="暂无维修记录">
+        <accordion-group *ngIf="show" heading="暂无">
             <!--<p><strong>暂无维修记录</strong></p>-->
         </accordion-group>
     </accordion-group>
