--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -65,12 +65,12 @@
     </li>
     <li class="nav-item dropdown" dropdown placement="bottom right">
       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
-        <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com"/>
+        <img src="assets/img/avatars/user.jpeg" class="img-avatar" alt="admin@bootstrapmaster.com"/>
       </a>
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="divider"></div>
         <!--<a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>-->
-        <a class="dropdown-item" href="/login" (click)="logout()"><i class="fa fa-lock"></i> Logout</a>
+        <a class="dropdown-item" href="/login" (click)="logout()"><i class="fa fa-lock"></i>注销</a>
       </div>
     </li>
     <!--<button class="navbar-toggler d-md-down-none" type="button" appAsideMenuToggler>-->
