fix bug for 保修系统用户界面修改意见20180522 4,7

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,4 +1,4 @@
 <footer class="app-footer">
-  <span><a href="http://coreui.io">CZQY</a> &copy; 2018 INFOLabs.</span>
-  <span class="ml-auto">Powered by <a href="http://info.czili.edu.cn">CZQY</a></span>
+  <span><a href="http://info.czili.edu.cn">INFO CENTER</a> &copy; 2018 INFO.CZILI</span>
+  <span class="ml-auto">Powered by <a href="http://www.czili.edu.cn/">CZILI</a></span>
 </footer>
