fix issue & improve html

--- a/src/app/components/app-aside/app-aside.component.html
+++ b/src/app/components/app-aside/app-aside.component.html
@@ -8,7 +8,7 @@
       <hr class="transparent mx-3 my-0">
       <div class="callout callout-warning m-0 py-3">
         <div class="avatar float-right">
-          <img src="assets/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
+          <!--<img src="assets/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
         </div>
         <div>Meeting with <strong>Lucas</strong></div>
         <small class="text-muted mr-3"><i class="icon-calendar"></i>&nbsp; 1 - 3pm</small>
@@ -17,7 +17,7 @@
       <hr class="mx-3 my-0">
       <div class="callout callout-info m-0 py-3">
         <div class="avatar float-right">
-          <img src="assets/img/avatars/4.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
+          <!--<img src="assets/img/avatars/4.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
         </div>
         <div>Skype with <strong>Megan</strong></div>
         <small class="text-muted mr-3"><i class="icon-calendar"></i>&nbsp; 4 - 5pm</small>
@@ -33,21 +33,21 @@
         <small class="text-muted mr-3"><i class="icon-calendar"></i>&nbsp; 10 - 11pm</small>
         <small class="text-muted"><i class="icon-home"></i>&nbsp; creativeLabs HQ </small>
         <div class="avatars-stack mt-2">
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/2.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/3.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/4.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/5.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/2.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/3.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/4.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/5.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
         </div>
       </div>
       <hr class="mx-3 my-0">
@@ -62,27 +62,27 @@
         <small class="text-muted mr-3"><i class="icon-calendar"></i>&nbsp; 4 - 6pm</small>
         <small class="text-muted"><i class="icon-home"></i>&nbsp; creativeLabs HQ </small>
         <div class="avatars-stack mt-2">
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/2.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/3.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/4.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/5.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
-          <div class="avatar avatar-xs">
-            <img src="assets/img/avatars/8.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-          </div>
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/2.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/3.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/4.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/5.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
+          <!--<div class="avatar avatar-xs">-->
+            <!--<img src="assets/img/avatars/8.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
+          <!--</div>-->
         </div>
       </div>
       <hr class="mx-3 my-0">
@@ -93,7 +93,7 @@
         <div class="message">
           <div class="py-3 pb-5 mr-3 float-left">
             <div class="avatar">
-              <img src="assets/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
+              <!--<img src="assets/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">-->
               <span class="avatar-status badge-success"></span>
             </div>
           </div>
