--- a/src/app/views/pages/login.component.html
+++ b/src/app/views/pages/login.component.html
@@ -27,9 +27,9 @@
                                         <div class="col-6">
                                             <button type="button" class="btn btn-primary px-4" type="submit" [disabled]="!aForm.valid">登录</button>
                                         </div>
-                                        <div class="col-6 text-right">
-                                            <button type="button" class="btn btn-link px-0">忘记密码?</button>
-                                        </div>
+                                        <!--<div class="col-6 text-right">-->
+                                            <!--<button type="button" class="btn btn-link px-0">忘记密码?</button>-->
+                                        <!--</div>-->
                                     </div>
                                 </div>
                             </fieldset>
