--- a/src/app/common/component/message/message.component.html
+++ b/src/app/common/component/message/message.component.html
@@ -1,18 +1,28 @@
-<div class=" flex-row align-items-center" style="margin-top: 12%">
+<div class=" flex-row align-items-center">
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row" style="margin-top: 10%; margin-left: 20%">
             <div class="col-md-6">
                 <div class="clearfix">
-                    <h1 class=" display-3 mr-3">消息提示页面</h1>
-                    <h4 class="pt-3" style="color:lightseagreen">{{message}}</h4>
+                    <img src="assets/img/message.jpeg" class="img-avatar"  height="200" width="200" style="float:left"/>
+                   <div style="float:left">
+                       <h2 class="pt-3" style="margin-top: 40%;margin-left: 10%;word-break:keep-all;white-space:nowrap;">消息提示：</h2>
+                   </div>
+
+
+
+
                     <!--<p class="text-muted">The page you are looking for is temporarily unavailable.</p>-->
                 </div>
+                <div style="margin-left: 85%;">
+                     <h3 class=" display-3 mr-3" style="color:lightseagreen ;word-break:keep-all;white-space:nowrap;">{{message}}</h3>
+                </div>
+                <br>
                 <div class="input-prepend input-group">
                     <!--<span class="input-group-addon"><i class="fa fa-search"></i></span>-->
-                    <!--<input id="prependedInput" class="form-control" size="16" type="text" placeholder="What are you looking for?">-->
-                    <span class="input-group-btn">
-                    <!--<button class="btn btn-info" type="button">Search</button>-->
-                         <button class="btn btn-outline-primary" type="button" (click)="jump(returnUrl)">返回上一页</button>
+                    <!--<input id="prependedInput" class="form-control" size="16" type="text" disabled style="color: gainsboro">-->
+                    <span class="input-group-btn" style="margin-left: 50%;">
+                    <button class="btn btn-info" type="button" >首页</button>
+                         <button class="btn btn-outline-primary" type="button" (click)="jump(returnUrl)" size="16">返回上一页</button>
                     </span>
                 </div>
             </div>
