--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -19,7 +19,7 @@
   <!--</ul>-->
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item dropdown d-md-down-none" dropdown placement="bottom right">
-      <a  *ngIf= "name == 'admin' " class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
+      <a  *ngIf= "sno == 'admin' " class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
         <i class="icon-bell"></i><span class="badge badge-pill badge-danger">{{repairCount>0 ? repairCount:null}}</span>
       </a>
       <!--<div class="dropdown-menu dropdown-menu-right dropdown-menu-lg" *dropdownMenu aria-labelledby="simple-dropdown">-->
