--- a/src/app/views/repair/assertRepair.list.component.html
+++ b/src/app/views/repair/assertRepair.list.component.html
@@ -25,7 +25,7 @@
                 <th>维修地址</th>
                 <!--<th>报修状态</th>-->
                 <th>报修时间</th>
-                <th>完成时间</th>
+                <th *ngIf="showFinishTime">完成时间</th>
                 <th>操作</th>
               </tr>
               </thead>
@@ -37,7 +37,7 @@
               <td>{{repair?.address}}</td>
               <!--<td>{{repair?.repair_status | repairStatus}}</td>-->
               <td>{{repair?.create_time| date:'yyyy/MM/dd HH:mm'}}</td>
-              <td>{{repair?.update_time| date:'yyyy/MM/dd HH:mm'}}</td>
+              <td *ngIf="showFinishTime" >{{repair?.update_time| date:'yyyy/MM/dd HH:mm'}}</td>
               <td>
                 <div class="btn-group-xs" dropdown container="body">
                   <button dropdownToggle type="button" class="btn btn-primary dropdown-toggle">
