modify area & add funtion for exporting excel

--- a/src/app/views/repair/assertRepair.list.component.html
+++ b/src/app/views/repair/assertRepair.list.component.html
@@ -11,7 +11,7 @@
           <div class="table-responsive">
             <form class="form-inline" style="margin-bottom: 1rem">
               <div class="form-group" style="margin-top: 1rem">
-                <!--<button class="btn-small btn-link"  type="button" (click)="create()">新建报修</button>-->
+                <!--<button class="btn-small btn-link"  type="button" (click)="readXlsFile()">导出数据</button>-->
                 <input class="search form-control" placeholder="搜索信息" #term (ngModelChange)="searchEquipmentName()"
                        [(ngModel)]="repairCriteria.content" name="userInfo" style="margin-left: 1.25rem;">
               </div>
