--- a/src/app/views/repair/assertRepair.detail.component.html
+++ b/src/app/views/repair/assertRepair.detail.component.html
@@ -23,12 +23,16 @@
                                 <div class="col-sm-8">
                                     <select [(ngModel)]="repair.area" name="area" class="form-control" disabled>
                                         <option value="0">公寓区</option>
-                                        <option value="1">教学区</option>
-                                        <option value="2">办公场所(室内公共设施)</option>
-                                        <option value="3">室外公共设施</option>
-                                        <option value="4">绿化卫生</option>
-                                        <option value="5">食堂</option>
-                                        <option value="6">其他</option>
+                                        <option value="11">图文楼</option>
+                                        <option value="12">教学楼</option>
+                                        <option value="13">工训楼</option>
+                                        <option value="14">后勤综合楼</option>
+                                        <option value="15">专业教学楼</option>
+                                        <option value="16">文体中心</option>
+                                        <option value="2">室外公共设施</option>
+                                        <option value="3">绿化卫生</option>
+                                        <option value="4">食堂</option>
+                                        <option value="17">其他</option>
                                     </select>
                                 </div>
                             </div>
