--- a/src/app/views/repair/printer.component.html
+++ b/src/app/views/repair/printer.component.html
@@ -58,6 +58,14 @@
                     <input  [(ngModel)]="repair.material" type="text" class="form-control" id="material" name="material">
                 </label>
                 <label style="width: 9%"></label>
+                <label class="control-label">数量:</label>
+                <label style="width: 30%">
+                    <input  [(ngModel)]="repair.material" type="text" class="form-control" id="materialNum" name="materialNum">
+                </label>
+            </div>
+            <br>
+            <div style="margin-top: 5px;">
+                <label style="width: 9%"></label>
                 <label class="control-label">维修时间:</label>
                 <label style="width: 30%">
                     <input  [(ngModel)]="repair.update_time" type="text" class="form-control" id="updateTime" name="updateTime">
