--- a/src/app/views/repair/repair.list.component.html
+++ b/src/app/views/repair/repair.list.component.html
@@ -32,7 +32,7 @@
               </thead>
               <tbody>
               <tr *ngFor="let repair of repairList">
-              <td>{{repair?.id}}</td>
+              <td>{{repair?.code}}</td>
               <td>{{repair?.content}}</td>
                 <td>{{repair?.area | area}}</td>
                 <td>{{repair?.address}}</td>
