--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -19,9 +19,9 @@
   <!--</ul>-->
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item dropdown d-md-down-none" dropdown placement="bottom right">
-      <a  *ngIf= "sno == 'admin' " class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
-        <i class="icon-bell"></i><span class="badge badge-pill badge-danger">{{repairCount>0 ? repairCount:null}}</span>
-      </a>
+      <!--<a  *ngIf= "sno == 'admin' " class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">-->
+        <!--<i class="icon-bell"></i><span class="badge badge-pill badge-danger">{{repairCount>0 ? repairCount:null}}</span>-->
+      <!--</a>-->
       <!--<div class="dropdown-menu dropdown-menu-right dropdown-menu-lg" *dropdownMenu aria-labelledby="simple-dropdown">-->
         <!--<div class="dropdown-header text-center"><strong>You have 5 notifications</strong></div>-->
         <!--<a href="#" class="dropdown-item">-->
@@ -70,7 +70,7 @@
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="divider"></div>
         <!--<a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>-->
-        <a class="dropdown-item" href="/login" (click)="logout()"><i class="fa fa-lock"></i>注销</a>
+        <a class="dropdown-item" href="/repair" (click)="logout()"><i class="fa fa-lock"></i>注销</a>
       </div>
     </li>
     <!--<button class="navbar-toggler d-md-down-none" type="button" appAsideMenuToggler>-->
