--- a/src/app/views/repair/assertRepair.detail.component.html
+++ b/src/app/views/repair/assertRepair.detail.component.html
@@ -101,10 +101,14 @@
                                 <!--</div>-->
                             <!--</div>-->
                             <div class="form-group">
+                                <!--<label class="col-sm-2 control-label">备注</label>-->
+                                <!--<div class="col-sm-10">-->
+                                    <!--<app-tinymce [initialContent]="repair.comments" [elementId]="'textareaContent'"-->
+                                                 <!--(onEditorKeyup)="setContent($event)"></app-tinymce>-->
+                                <!--</div>-->
                                 <label class="col-sm-2 control-label">备注</label>
-                                <div class="col-sm-10">
-                                    <app-tinymce [initialContent]="repair.comments" [elementId]="'textareaContent'"
-                                                 (onEditorKeyup)="setContent($event)"></app-tinymce>
+                                <div class="col-sm-8">
+                                    <textarea rows="6" cols="90" [(ngModel)]="repair.comments" name="comments"></textarea>
                                 </div>
                             </div>
                         </form>
