--- a/src/app/views/repair/repair.list.component.html
+++ b/src/app/views/repair/repair.list.component.html
@@ -49,6 +49,10 @@
                     </li>
                     <li role="menuitem" *ngIf="repair.repair_status===0">
                       <a class="dropdown-item" href="javascript:void(0);"
+                         (click)="upload(repair)">添加附件</a>
+                    </li>
+                    <li role="menuitem" *ngIf="repair.repair_status===0">
+                      <a class="dropdown-item" href="javascript:void(0);"
                          (click)="update(repair)">修改</a>
                     </li>
                     <li role="menuitem" *ngIf="repair.repair_status!==0 && repair.repair_status!==1">
