--- a/src/app/views/repair/repairRecord.detail.component.html
+++ b/src/app/views/repair/repairRecord.detail.component.html
@@ -29,7 +29,14 @@
                                 <label class="col-sm-2 control-label">使用材料<span style="color:red; font-size: 20px;">*</span></label>
                                 <div class="col-sm-8">
                                     <input type="text" [(ngModel)]="repair.material" class="form-control" id="inputMaterial"
-                                           name="inputMaterial" placeholder="请输入材料" placeholder="无">
+                                           name="inputMaterial"  placeholder="无">
+                                </div>
+                            </div>
+                            <div class="form-group" style="margin-top: 50px;" *ngIf="status ==1">
+                                <label class="col-sm-2 control-label">耗材数量<span style="color:red; font-size: 20px;">*</span></label>
+                                <div class="col-sm-8">
+                                    <input type="text" [(ngModel)]="repair.usecount" class="form-control" id="inputUseCount"
+                                           name="inputUseCount"  placeholder="0">
                                 </div>
                             </div>
                             <div class="form-group" style="margin-top: 50px;" *ngIf="status ==1">
