--- a/src/app/views/repair/assertRepair.detail.component.html
+++ b/src/app/views/repair/assertRepair.detail.component.html
@@ -29,6 +29,7 @@
                                         <option value="14">后勤综合楼</option>
                                         <option value="15">专业教学楼</option>
                                         <option value="16">文体中心</option>
+                                        <option value="18">留学生公寓</option>
                                         <option value="20">室外公共设施</option>
                                         <option value="30">绿化卫生</option>
                                         <option value="40">食堂</option>
