--- a/src/app/views/repair/repair.list.component.html
+++ b/src/app/views/repair/repair.list.component.html
@@ -112,22 +112,32 @@
             <label class="control-label">区域</label>
             <label style="width: 100%">
               <select *ngIf="!disable"  value="{{f_Repair.area}}" name="area" (change)="getValue($event,2)" class="form-control">
-                <option value="0">宿舍区</option>
-                <option value="1">教学区</option>
-                <option value="2">办公场所(室内公共设施)</option>
-                <option value="3">室外公共设施</option>
-                <option value="4">绿化卫生</option>
-                <option value="5">食堂</option>
-                <option value="6">其他</option>
+                <option value="10">公寓区</option>
+                <option value="11">图文楼</option>
+                <option value="12">教学楼</option>
+                <option value="13">工训楼</option>
+                <option value="14">后勤综合楼</option>
+                <option value="15">专业教学楼</option>
+                <option value="16">文体中心</option>
+                <option value="18">留学生公寓</option>
+                <option value="20">室外公共设施</option>
+                <option value="30">绿化卫生</option>
+                <option value="40">食堂</option>
+                <option value="17">其他</option>
               </select>
               <select  *ngIf="disable" [(ngModel)]="f_Repair.area" name="area1" class="form-control" disabled>
-                <option value="0">宿舍区</option>
-                <option value="1">教学区</option>
-                <option value="2">办公场所(室内公共设施)</option>
-                <option value="3">室外公共设施</option>
-                <option value="4">绿化卫生</option>
-                <option value="5">食堂</option>
-                <option value="6">其他</option>
+                <option value="10">公寓区</option>
+                <option value="11">图文楼</option>
+                <option value="12">教学楼</option>
+                <option value="13">工训楼</option>
+                <option value="14">后勤综合楼</option>
+                <option value="15">专业教学楼</option>
+                <option value="16">文体中心</option>
+                <option value="18">留学生公寓</option>
+                <option value="20">室外公共设施</option>
+                <option value="30">绿化卫生</option>
+                <option value="40">食堂</option>
+                <option value="17">其他</option>
               </select>
             </label>
             <label class="control-label">报修地址</label>
